# db_help

./: .env  Dockerfile  README.md  docker-compose.yml  docs  main.py  mkdocs.yml  pyproject.toml
src/db_help/: file_manager.py  mysql.py  qdrant.py
src/db_help.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_main.py  test_mysql.py
