[project]
name = "db-help"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "anyio>=4.10.0", "fastapi>=0.116.2", "mysql-connector-python>=9.4.0", "pytest>=8.4.2", "pytest-asyncio>=1.2.0", "pytest-tornasync>=0.6.0.post2", "toml>=0.10.2", "uvicorn>=0.35.0",]

[tool.setuptools.package-data]
db_help = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
